[gd_scene load_steps=15 format=3 uid="uid://c41lse7xwmbmw"]

[ext_resource type="Texture2D" uid="uid://ru0h3vgwyhtf" path="res://Enemigos/Animated insect enemy assets/EggCluster.png" id="1_eb0q4"]
[ext_resource type="Script" uid="uid://bc0u4pqfbsj5k" path="res://nido_spawn.gd" id="1_ishn6"]
[ext_resource type="PackedScene" uid="uid://dygwkrxvva43k" path="res://escenas/enemigo.tscn" id="2_hqkwa"]
[ext_resource type="Texture2D" uid="uid://cldwpn1efh7ej" path="res://Enemigos/Animated insect enemy assets/Eggsplosion.png" id="2_ishn6"]
[ext_resource type="PackedScene" uid="uid://ceumgki1e5gt6" path="res://vida_RE.tscn" id="3_hmx84"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqkwa"]
atlas = ExtResource("1_eb0q4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmx84"]
atlas = ExtResource("2_ishn6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdn88"]
atlas = ExtResource("2_ishn6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgq01"]
atlas = ExtResource("2_ishn6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4okcn"]
atlas = ExtResource("2_ishn6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kht5n"]
atlas = ExtResource("2_ishn6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8h7x1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqkwa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmx84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdn88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgq01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4okcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kht5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgq01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdn88")
}],
"loop": false,
"name": &"nace",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfy61"]
size = Vector2(72, 42)

[sub_resource type="CircleShape2D" id="CircleShape2D_hmx84"]

[node name="nido_spawn" type="CharacterBody2D" groups=["enemigos"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_ishn6")
kamikaze_scene = ExtResource("2_hqkwa")
HeartScene = ExtResource("3_hmx84")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
scale = Vector2(3, 2.25)
sprite_frames = SubResource("SpriteFrames_8h7x1")
animation = &"nace"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_kfy61")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_hmx84")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
